<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:padding="@dimen/material_container_padding">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/form_header_spacing"
        android:text="@string/login_c"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/colorPrimary" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:counterEnabled="true"
        app:counterMaxLength="10"
        app:counterTextAppearance="@style/TextAppearance.AppCompat.Caption"
        app:errorEnabled="true"
        app:errorTextAppearance="@style/Theme.Design">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/mStudentID"
            style="@style/AppTheme.Input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/student_id"
            android:inputType="number"
            android:maxLength="10" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true"
        app:errorTextAppearance="@style/Theme.Design">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/mPassword"
            style="@style/AppTheme.Input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:imeActionLabel="@string/login_btn_text"
            android:inputType="textPassword" />

    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/fgt_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/form_links_spacing"
        android:padding="4dp"
        android:text="@string/forgot_pass"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/colorPrimary" />

    <Button
        android:id="@+id/login_btn"
        style="@style/ButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_btn_text" />
</LinearLayout>