<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:showIn="@layout/mentor_register_activity">
    <android.support.v7.widget.CardView
        style="@style/CardView.Light"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/material_container_padding">

            <TextView
                    style="@style/TextAppearance.AppCompat.Title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="24dp"
                android:text="@string/personal_information"
                    android:textColor="@color/colorPrimary"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    style="@style/Base.TextAppearance.AppCompat.Subhead"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/school_name"/>
                <EditText
                        android:id="@+id/men_name"
                        style="@style/AppTheme.Input"
                        android:focusedByDefault="true"
                        android:inputType="textPersonName"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/material_content_padding"
                android:layout_marginTop="@dimen/material_container_padding"
                android:orientation="vertical">
                <TextView
                    style="@style/Base.TextAppearance.AppCompat.Subhead"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/phone"/>
                <EditText
                    android:id="@+id/men_phone"
                    style="@style/AppTheme.Input"
                    android:hint="02xxxxxxxx / 05xxxxxxxx"
                    android:inputType="phone"
                    android:maxLength="10" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/Base.TextAppearance.AppCompat.Subhead"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Address" />

                <EditText
                    android:id="@+id/men_address"
                    style="@style/AppTheme.Input"
                    android:focusedByDefault="true"
                    android:inputType="textMultiLine" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/Base.TextAppearance.AppCompat.Subhead"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mentor_qualification" />

                <EditText
                    android:id="@+id/men_qua"
                    style="@style/AppTheme.Input"
                    android:focusedByDefault="true"
                    android:inputType="text" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="@dimen/material_container_padding">
                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <TextView
                        style="@style/Base.TextAppearance.AppCompat.Subhead"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/status"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                    <Spinner
                        android:id="@+id/men_status"
                        style="@style/Widget.AppCompat.Spinner.DropDown"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:entries="@array/mentor_status"
                        android:gravity="end"
                        android:spinnerMode="dropdown"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </android.support.constraint.ConstraintLayout>
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>
    <android.support.v7.widget.CardView
        style="@style/CardView.Light"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/material_container_padding">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/material_container_padding">
            <TextView
                style="@style/Base.TextAppearance.AppCompat.Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:text="Bank Information"
                android:textColor="@color/colorPrimary" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/material_container_padding"
                android:orientation="vertical">

                <TextView
                    style="@style/Base.TextAppearance.AppCompat.Subhead"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mentor_bank_name"/>

                <EditText
                    android:id="@+id/men_bank_name"
                    style="@style/AppTheme.Input"
                    android:inputType="text"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/material_container_padding"
                android:orientation="vertical">

                <TextView
                    style="@style/Base.TextAppearance.AppCompat.Subhead"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mentor_bank_branch"/>

                <EditText
                    android:id="@+id/men_bank_branch"
                    style="@style/AppTheme.Input"
                    android:inputType="text"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    style="@style/Base.TextAppearance.AppCompat.Subhead"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mentor_bank_ac_num" />

                <EditText
                    android:id="@+id/men_ac_number"
                    style="@style/AppTheme.Input"
                    android:inputType="text" />
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>
    <LinearLayout
        android:id="@+id/reg_men_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/material_container_padding"
        android:layout_marginLeft="@dimen/material_container_padding"
        android:layout_marginRight="@dimen/material_container_padding"
        android:layout_marginTop="@dimen/material_container_padding">

        <Button
            android:id="@+id/mentor_done"
            style="@style/ButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Save" />

        <Button
            android:id="@+id/to_school"
            style="@style/ButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/material_content_padding"
            android:layout_weight="1"
            android:background="@color/colorPrimaryDark"
            android:text="School Details" />
    </LinearLayout>

</LinearLayout>